Git_WGBH_QC/src/objects/Interactions__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Author__c</fullName>
        <formula>Interaction__r.Author__r.FirstName + &apos; &apos; + Interaction__r.Author__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>Interaction__r.Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Attendee__c</fullName>
        <label>External Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interaction</relationshipLabel>
        <relationshipName>Interaction_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <label>Interaction</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Interaction_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Attendee__c</fullName>
        <label>Internal Attendee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interaction_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>IF( External_Attendee__r.Id != null, HYPERLINK(&quot;/&quot;+ External_Attendee__c, External_Attendee__r.FirstName +&apos; &apos;+ External_Attendee__r.LastName,&quot; _self&quot;), HYPERLINK(&quot;/&quot;+ Internal_Attendee__c , Internal_Attendee__r.FirstName +&apos; &apos;+ Internal_Attendee__r.LastName ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Pledge__c</fullName>
        <description>Lookup to the Proposal/Pledge that the Interaction is associated with</description>
        <inlineHelpText>Link the Interaction to an associated Proposal/Pledge</inlineHelpText>
        <label>Proposal/Pledge</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposals_Pledges__c</fullName>
        <label>Proposals/Pledges</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proposals_Pledges</relationshipLabel>
        <relationshipName>Interaction_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Interaction__r.Subject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <label>Interactions</label>
    <nameField>
        <displayFormat>INT-{000000}</displayFormat>
        <label>Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction_Junction</pluralLabel>
    <recordTypes>
        <fullName>External</fullName>
        <active>true</active>
        <label>External</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <label>Internal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>